tests/macros/password/default.rs
fn main() {
    let q = inquisition::questions![Password { default: todo!() }];
}
